# Recorder

./: .env.example  .gitignore  Makefile  pyproject.toml
src/recorder/: __init__.py  camera.py  cli.py  config.py  main.py  paths.py  service.py  storage.py
src/recorder/telegram/: bot.py  client.py  commands.py  config.py  env.py
