[project]
    dependencies    = ["picamera2; platform_system=='Linux'"]
    description     = "Raspberry Pi continuous video recorder with auto-rotation"
    name            = "recorder"
    readme          = "README.md"
    requires-python = ">=3.8"
    version         = "0.1.0"

    [project.scripts]
        recorder = "recorder.main:main"

[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]

[tool.hatch.build.targets.wheel]
    packages = ["src/recorder"]

[dependency-groups]
    dev = ["pre-commit>=3.5.0", "ruff>=0.14.10"]

[tool.ruff]
    line-length    = 88
    target-version = "py38"

    [tool.ruff.lint]
        ignore = []
        select = [
            "B",  # flake8-bugbear
            "C4", # flake8-comprehensions
            "E",  # pycodestyle errors
            "F",  # pyflakes
            "I",  # isort
            "UP", # pyupgrade
            "W",  # pycodestyle warnings
        ]

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false

        [tool.ruff.lint.isort]
            known-first-party = ["recorder"]
