[project]
dependencies = [
    "picamera2 ; platform_system == 'Linux'",
    "opencv-python-headless ; platform_system == 'Linux'",
]
description = "Raspberry Pi continuous video recorder with auto-rotation"
name = "recorder"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
recorder = "recorder.main:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/recorder"]

[dependency-groups]
dev = ["pre-commit>=3.5.0", "ruff>=0.14.10"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = []
select = ["B", "C4", "E", "F", "I", "UP", "W"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["recorder"]
