[project]
dependencies = [
    "picamera2 ; platform_system == 'Linux'",
    "opencv-python-headless ; platform_system == 'Linux'",
    "pydantic>=2.13.4",
    "click>=8.4.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]
description = "Raspberry Pi continuous video recorder with auto-rotation"
name = "recorder"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.scripts]
recorder = "recorder.cli:cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/recorder"]

[dependency-groups]
dev = ["pre-commit>=3.5.0", "ruff>=0.14.10"]

[tool.uv]
dependency-metadata = [{ name = "python-prctl", version = "1.8.1" }]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
ignore = []
select = ["B", "C4", "E", "F", "I", "UP", "W"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["recorder"]
